Dropdowns should not take up space while collapsed- fixes horizontal scrollbars.

--- a/src/assets/less/helpers.less
+++ b/src/assets/less/helpers.less
@@ -43,11 +43,15 @@
 }
 
 .hidden-dropdown {
+	text-indent: -9999em;
 	clip: rect(1px, 1px, 1px, 1px);
+	width: 1px;
 }
 
 .show-dropdown {
+	text-indent: 0;
 	clip: auto;
+	width: auto;
 }
 
 /* Clearing */
