--- a/src/assets/less/menu.less
+++ b/src/assets/less/menu.less
@@ -62,6 +62,14 @@
 		ul {
 			left: 100%;
 			top: 0;
+
+			ul {
+				position: relative;
+				left: 0;
+				top: 0;
+				.show-dropdown;
+				box-shadow: none;
+			}
 		}
 
 		a {
@@ -157,7 +165,9 @@
 				position: relative;
 				float: none;
 				top: 0;
+				left: 0;
 				box-shadow: none;
+				.show-dropdown;
 			}
 		}
 
